added images and body section

--- a/index.html
+++ b/index.html
@@ -4,10 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment Website</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
-        
+        <nav>
+            <h3><span class="country">Country</span> <span class="travel">Travel</span></h3>
+            <ul>
+                <li><a href=""><span class="home">Home</span></a></li>
+                <li><a href="">Packages</a></li>
+                <li><a href="">Testimonial</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <h3 class="banner-title">Explore Your Travel</h3>
+            <p class="text-light-gray">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. <br> In et odio enim ac quis sapien urna eu phasellus.</p>
+          <section class="container">
+                <input type="text" placeholder="Where Go">
+                <input type="text" placeholder="When">
+                <input type="text" placeholder="Select Type">
+                <button class="btn-primary">Find Now</button>
+          </section>
     </header>
+    <main>
+    </div>
+    <section class="features">
+        <div class="feature-content">
+            <h3 class="section-title">Our Popular Tours</h3>
+            <p class="text">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit <br> massa. Sodales dictumst nec nibh pellentesque.</p>
+            <ul class="text">
+                <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna <br> nullam odio neque diam. Sociis erat at .</li>
+                <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea <br>  lacus. Lectus suspendisse nullam.</li>
+                <li> Accumsan eget et turpis praesent lorem egestas enim <br> elit bibendum. Risus at in.</li>
+            </ul>
+            <p class="text">Amet consectetur. Vulputate commodo felis molestie risus 
+                ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus semper tincidunt. </p>
+                <button class="btn-primary">Read More</button>
+        </div>
+        <div class="feature-img">
+            <img src="Images/Rectangle 4.png" alt="">
+        </div>
+    </section>
+    </main>
 </body>
 </html>
