--- a/index.html
+++ b/index.html
@@ -47,6 +47,45 @@
             <img src="Images/Rectangle 4.png" alt="">
         </div>
     </section>
+    <section>
+        <div class="content">
+            <h3 class="destination">Choose Your Destination</h3>
+            <p class="paragraph">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio <br> sit massa. Sodales dictumst nec nibh pellentesque.</p>
+        </div>
+        <div class="banner-picture">
+            <a href=""><img src="Images/Rectangle 5.png" alt=""></a>
+            <a href=""><img src="Images/Rectangle 8.png" alt=""></a>
+            <a href=""><img src="Images/Rectangle 6.png" alt=""></a>
+            <a href=""><img src="Images/Rectangle 7.png" alt=""></a>
+            <a href=""><img src="Images/Rectangle 9.png" alt=""></a>
+            <a href=""><img src="Images/Rectangle 11.png" alt=""></a>
+            <a href=""><img src="Images/Rectangle 10.png" alt=""></a>
+        </div>
+    </section>
+    <div class="latest-banner">
+        <h3 class="destination">Why Choose Us</h3>
+        <p class="paragraph">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit <br> Sodales dictumst nec nibh pellentesque.</p>
+    </div>
+    <div class="facts-card-container">
+           <div class="card-1">
+            <img src="Images/hotel 1.svg" alt="">
+            <h2 class="card-stats">Handpicked Hotels</h2>
+            <p class="card-title">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+           </div>
+           <div class="card-2">
+            <img src="Images/map 1.svg" alt="">
+            <h2 class="card-stats">World Class Service</h2>
+            <p class="card-title">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+           </div>
+    </div>
+    <div class="card">
+        <div class="card-3">
+            <img src="Images/price-tag 1.svg" alt="">
+            <h2 class="card-stats">Best Price Guarantee</h2>
+            <p class="card-title">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+           </div>
+      </div>
     </main>
 </body>
 </html>
+    
