added a footer section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
     </div>
     <section class="features">
-        <div class="feature-content">
+        <div class="features-content">
             <h3 class="section-title">Our Popular Tours</h3>
             <p class="text">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit <br> massa. Sodales dictumst nec nibh pellentesque.</p>
             <ul class="text">
@@ -43,7 +43,7 @@
                 ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus semper tincidunt. </p>
                 <button class="btn-primary">Read More</button>
         </div>
-        <div class="feature-img">
+        <div class="features-img">
             <img src="Images/Rectangle 4.png" alt="">
         </div>
     </section>
@@ -85,7 +85,59 @@
             <p class="card-title">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
            </div>
       </div>
+      <section class="feature-1">
+        <div class="feature-content">
+            <h3 class="section-title">A Simple Perfect Place To Get Lost</h3>
+            <p class="text">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla <br> amet et. Libero commodo sagittis dignissim adipiscing quis. </p>
+            <ul class="list">
+                <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea <br> porta lacus. Lectus suspendisse nullam.</li>
+                <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae <br> platea porta lacus. Lectus suspendisse nullam.</li>
+            </ul>
+            <button class="btn-primary">See More</button>
+        </div>
+        <div class="feature-img">
+            <img src="Images/Group 40089.png" alt="">
+        </div>
+      </section>
+      <section class="form-section">
+        <div>
+            <form class="form">
+                <h4 class="news">Newsletter</h4>
+                <p class="text">Get your daily dose of travel news & tips. Sign <br> up today!</p>
+                <hr>
+                <input type="text" placeholder="Enter your name">
+                <input type="email" name="" placeholder="Enter your email" id="">
+                <input class="button" type="button" value="Subscribe">
+            </form>
+        </div>
+        <div class="form-img">
+            <img src="Images/Rectangle 8 (1).png" alt="">
+            <div class="discount">
+                <p>Travel.com</p>
+                <h3>Save up to 70%</h3>
+            </div>
+        </div>
+      </section>
     </main>
+    <footer>
+        <div class="footer-column">
+            <div class="icons">
+            <h3 class="span"><span class="country">Country</span>  <span class="travel">Travel</span></h3>
+             <p class="paragraph">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
+          </div>
+            <div class="social-links">
+                <a href=""><img src="Images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="Images/icons/insta.png" alt=""></a>
+                <a href=""><img src="Images/icons/twitter.png" alt=""></a>
+                <a href=""><img src="" alt=""></a>
+                <br>
+                <br>
+                <br>
+                <hr class="line">
+                <h4 class="reserved">2017, All Rights Reserved.</h4>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
     
