changes main section and css style

--- a/index.html
+++ b/index.html
@@ -53,14 +53,35 @@
             <p class="paragraph">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio <br> sit massa. Sodales dictumst nec nibh pellentesque.</p>
         </div>
         <div class="banner-picture">
-            <a href=""><img src="Images/Rectangle 5.png" alt=""></a>
-            <a href=""><img src="Images/Rectangle 8.png" alt=""></a>
-            <a href=""><img src="Images/Rectangle 6.png" alt=""></a>
-            <a href=""><img src="Images/Rectangle 7.png" alt=""></a>
-            <a href=""><img src="Images/Rectangle 9.png" alt=""></a>
-            <a href=""><img src="Images/Rectangle 11.png" alt=""></a>
-            <a href=""><img src="Images/Rectangle 10.png" alt=""></a>
-        </div>
+            <div class="picture-1">
+             <h3 class="mim">Maldives</h3>
+            <img src="Images/Rectangle 5.png" alt="">
+            </div>
+            <div class="picture-2">
+             <h3 class="mim">Indonesia</h3>
+             <img src="Images/Rectangle 8.png" alt="">
+            </div>
+            <div class="picture-3">
+             <h3 class="mim">Srilanka</h3>
+             <img src="Images/Rectangle 6.png" alt="">
+            </div>
+            <div class="picture-4">
+             <h3 class="mim">North America</h3>
+             <img src="Images/Rectangle 7.png" alt="">
+            </div>
+            <div class="picture-5">
+             <h3 class="mim">Kashmir</h3>
+             <img src="Images/Rectangle 9.png" alt="">
+            </div>
+            <div class="picture-6">
+             <h3 class="mim">Bangladesh</h3>
+             <img src="Images/Rectangle 11.png" alt="">
+            </div>
+            <div class="picture-7">
+             <h3 class="mim">Bandarban</h3>
+             <img src="Images/Rectangle 10.png" alt="">
+            </div>
+         </div>
     </section>
     <div class="latest-banner">
         <h3 class="destination">Why Choose Us</h3>
@@ -96,6 +117,7 @@
             <button class="btn-primary">See More</button>
         </div>
         <div class="feature-img">
+            <h3 class="dim">Watch Our Mountain in Bangladesh</h3>
             <img src="Images/Group 40089.png" alt="">
         </div>
       </section>
