--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <!-- header section start -->
     <header>
         <nav>
-            <h3><span class="country">Country</span> <span class="travel">Travel</span></h3>
+            <h3> <img src="Images/Group 40071 (2).png" alt=""> <span class="country">Country</span> <span class="travel">Travel</span></h3>
             <ul>
                 <li><a href=""><span class="home">Home</span></a></li>
                 <li><a href="">Packages</a></li>
@@ -23,11 +24,13 @@
             <p class="text-light-gray">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. <br> In et odio enim ac quis sapien urna eu phasellus.</p>
           <section class="container">
                 <input type="text" placeholder="Where Go">
-                <input type="text" placeholder="When">
-                <input type="text" placeholder="Select Type">
-                <button class="btn-primary">Find Now</button>
+                <input type="text" placeholder="When"><i class="fa-solid fa-angle-down"></i>
+                <input  type="text" placeholder="Select Type"><i class="fa-solid fa-angle-down"></i>
+                <button class="btn-primary"> <svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"/></svg> Find Now</button>
           </section>
     </header>
+    <!-- this is header section closed -->
+    <!-- this is main section start -->
     <main>
     </div>
     <section class="features">
@@ -141,10 +144,12 @@
         </div>
       </section>
     </main>
+       <!-- this is main section closed -->
+       <!-- this is footer section start  -->
     <footer>
         <div class="footer-column">
             <div class="icons">
-            <h3 class="span"><span class="country">Country</span>  <span class="travel">Travel</span></h3>
+            <h3 class="span"> <img class="short-icon" src="Images/Group 40071 (2).png" alt=""> <span class="country">Country</span>  <span class="travel">Travel</span></h3>
              <p class="paragraph">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
           </div>
             <div class="social-links">
@@ -160,6 +165,7 @@
             </div>
         </div>
     </footer>
+     <!-- this is footer section closed  -->
 </body>
 </html>
     
